# GenericAgent-TUI

./: .gitignore  README.en.md  README.md  pyproject.toml
.trellis/spec/backend/: agent-control-protocol.md  index.md
.trellis/tasks/05-28-secret-vault-security-mode/: task.json
.trellis/tasks/05-30-fix-recent-session-persistence-ordering/: prd.md  task.json
.trellis/tasks/05-30-fix-secret-subagent-persistence-reuse/: prd.md  task.json
.trellis/tasks/06-01-readme-linuxdo-promo/: prd.md  task.json
.trellis/tasks/06-01-smooth-tui-upstream-integration/: prd.md  task.json
.trellis/tasks/06-04-fix-trellis-tracking-ignored-metadata/: check.jsonl  prd.md  task.json
.trellis/tasks/06-04-unify-tui-scheduling-session-registry/: task.json
.trellis/tasks/06-05-extract-genericagent-provider-adapter-glue/: acceptance-plan.md  implement.jsonl  prd.md  task.json
.trellis/tasks/06-05-extract-scheduler-module-from-app/: task.json
.trellis/tasks/06-06-merge-model-commands-provider-tabs/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-10-ai-slop-cleanup/: task.json
.trellis/tasks/06-11-implement-ohmypi-runtime-provider/: task.json
docs/: runtime-provider-control-plane.md
integrations/omp-ga-tui-plugin/: README.md  package.json
scripts/: check_policy_gates.py
src/ga_tui/: agent_bridge.py  app.py  compat_legacy.py  genericagent_provider.py  integration.py  ohmypi_provider.py  scheduler.py
tests/: conftest.py  test_cell_utils.py  test_jsonl.py  test_path_safety.py  test_scheduler_parsing.py  test_secret_crypto.py  test_time_path_helpers.py
(+55 files in other folders)
