[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shuheng"
version = "0.1.0"
description = "Shuheng: governed terminal control plane for local agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyNaCl>=1.5.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "urllib3>=1.26",
]

[project.scripts]
shuheng = "ga_tui.app:main"
shuheng-agent-bridge = "ga_tui.agent_bridge:main"
shuheng-check = "ga_tui.integration:doctor_main"
shuheng-install-core-shim = "ga_tui.integration:install_core_shim_main"
shuheng-integration = "ga_tui.integration:main"
ga-tui = "ga_tui.app:main"
ga-tui-agent-bridge = "ga_tui.agent_bridge:main"
ga-tui-check = "ga_tui.integration:doctor_main"
ga-tui-install-core-shim = "ga_tui.integration:install_core_shim_main"
ga-tui-integration = "ga_tui.integration:main"

[tool.setuptools.packages.find]
where = ["src"]
